[package]
name = "namaste-mysql-adapter"
version = "0.1.0"
authors = ["Huseyin Yilmaz <yilmazhuseyin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mysql = "20.1.0"
msql-srv = "0.9.2"
nom-sql = "0.0.11"